2006-01-11  Erik Hjortsberg  <erik@katastrof.nu>

	* configure.ac: require eris 1.3.10	

2006-01-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Makefile.am: rearranged the order of the linking, so that libServices gets linked in before libSoundService

2006-01-11  Miguel Guzman  <aglanor@gmail.com>

	* configure.ac: check for OpenAL 0.0.8, create the Makefile of the sound service
	* src/services/EmberServices.cpp: getter for SoundService
	* src/services/Makefile.am: include sound service as a subdir
	* src/services/sound/Makefile.am: added SoundService.h as a non-installable header
	* src/services/sound/SoundService.cpp: updated code to compile with latest OpenAL (still is non-functional)

2006-01-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/ServerBrowser.lua|ServerBrowser.layout: fixed the method recieving ServerInfo objects

2006-01-10  Miguel Guzman  <aglanor@gmail.com>

	* src/components/ogre/scripting/ScriptingService.h: gcc 4.0 needs an explicit forward declaration in addition to the declaration of a friend class.

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/scripting/LuaScriptingProvider.h: with CEGUI 0.4.0 LuaScriptingModule.h has been changed to CEGUILua.h

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Makefile.am|WidgetDefinitions.cpp: removed reference to GiveWidget.cpp and MaterialPicker, cleaned up obsolete code
	* src/components/ogre/scripting/bindings/lua/EmberOgre.pkg|lua_EmberOgre.cpp|requried.h: updated bindings
	* src/services/metaserver/MetaserverService.cpp: removed crashing code
	* src/components/ogre/GUIManager.cpp: cleaned up code

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: increase the frequency for server updates
	* configure.ac:
		* bump the version number
		* check for lua
		* added new build targets

2006-01-10  Erik Hjortsberg  <erik@katastrof.nu>
